[package]
name = "nameless-peg-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "aabbcc-success"
path = "src/examples/aabbcc-success.rs"

[[example]]
name = "aabbcc-failure"
path = "src/examples/aabbcc-failure.rs"
