[package]
name = "nameless-peg-parser"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["peg", "parsing", "grammar"]
categories = ["parsing", "parser-implementations"]
repository = "https://github.com/VoidedName/nameless-peg-parser"
authors = ["Daniel Kogan"]
description = "An implementation of PEG, still unstable"

[dependencies]
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "aabbcc-success"
path = "src/examples/aabbcc-success.rs"

[[example]]
name = "aabbcc-failure"
path = "src/examples/aabbcc-failure.rs"
